# spec-kit-tasks

./: .tasks.json  README.md  main.py  pyproject.toml  task
.specify/memory/: constitution.md
spec_kit_tasks.egg-info/: SOURCES.txt  entry_points.txt
specs/001-task-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-task-cli/checklists/: requirements.md
specs/001-task-cli/contracts/: cli.md
src/: __init__.py  repl.py
src/cli/: main.py
src/lib/: color.py  dates.py  storage.py
src/models/: task.py
src/services/: task_service.py
src/spec_kit_tasks.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
